--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="preload" href="css/styles.css" as="style">
         <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="css/background.css">
     </head>
 
     <body>
@@ -263,6 +264,7 @@
             </div>
         </footer>
 
+        <script src="js/background.js"></script>
         <script src="js/app.js"></script>
 
     </body>
